--- a/src/poiupv/vistes/Registre.fxml
+++ b/src/poiupv/vistes/Registre.fxml
@@ -1,11 +1,170 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poiupv.controladors.RegistreController">
-    
-</AnchorPane>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="903.0" prefWidth="1313.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poiupv.controladors.RegistreController">
+   <top>
+      <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #6caae1;">
+         <children>
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Registre">
+               <font>
+                  <Font size="44.0" />
+               </font>
+               <HBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </HBox.margin>
+            </Text>
+         </children>
+         <BorderPane.margin>
+            <Insets bottom="10.0" top="10.0" />
+         </BorderPane.margin>
+      </HBox>
+   </top>
+   <center>
+      <VBox prefHeight="200.0" prefWidth="100.0">
+         <children>
+            <HBox prefHeight="90.0" prefWidth="1313.0">
+               <children>
+                  <VBox prefHeight="100.0" prefWidth="244.0">
+                     <children>
+                        <Label text="Nom d'usuari">
+                           <padding>
+                              <Insets bottom="5.0" />
+                           </padding>
+                        </Label>
+                        <TextField fx:id="usuari" prefHeight="25.0" prefWidth="355.0" promptText="6-15 caràcters o dígits, espais - _" />
+                     </children>
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                  </VBox>
+                  <VBox prefHeight="90.0" prefWidth="355.0">
+                     <children>
+                        <Label fx:id="errorUsuari" prefHeight="85.0" prefWidth="344.0" text="Seleccionar un nou valor que contingui entre 6 i 15 caràcters o dígits i espais _ -" textFill="RED" wrapText="true">
+                           <VBox.margin>
+                              <Insets bottom="5.0" left="10.0" right="10.0" top="10.0" />
+                           </VBox.margin>
+                        </Label>
+                     </children>
+                  </VBox>
+               </children>
+            </HBox>
+            <HBox prefHeight="90.0" prefWidth="1313.0">
+               <children>
+                  <VBox prefHeight="90.0" prefWidth="252.0">
+                     <children>
+                        <Label text="Correu">
+                           <VBox.margin>
+                              <Insets bottom="5.0" left="10.0" right="10.0" top="10.0" />
+                           </VBox.margin>
+                        </Label>
+                        <TextField fx:id="correu" prefHeight="25.0" prefWidth="355.0" promptText="Exemple@gmail.com">
+                           <padding>
+                              <Insets left="10.0" />
+                           </padding>
+                           <VBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" />
+                           </VBox.margin>
+                        </TextField>
+                     </children>
+                  </VBox>
+                  <Label fx:id="errorCorreu" prefHeight="87.0" prefWidth="224.0" text="El correu ha de tindre format valid" textFill="RED">
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                  </Label>
+               </children>
+            </HBox>
+            <HBox prefHeight="90.0" prefWidth="200.0">
+               <children>
+                  <VBox prefHeight="75.0" prefWidth="447.0">
+                     <children>
+                        <Label text="Contrassenya">
+                           <VBox.margin>
+                              <Insets left="10.0" top="10.0" />
+                           </VBox.margin>
+                        </Label>
+                        <PasswordField fx:id="contrassenya" prefHeight="22.0" prefWidth="266.0" promptText="8-20 caràcters, 1 lletra minuscules o majuscules, digit i caracter especial">
+                           <padding>
+                              <Insets left="10.0" top="5.0" />
+                           </padding>
+                           <VBox.margin>
+                              <Insets left="10.0" right="10.0" top="5.0" />
+                           </VBox.margin>
+                        </PasswordField>
+                     </children>
+                  </VBox>
+                  <VBox prefHeight="90.0" prefWidth="590.0">
+                     <children>
+                        <Label fx:id="errorContrassenya" prefHeight="84.0" prefWidth="551.0" text="La contrassenya ha de contindre 8-20 caràcters, 1 lletra minuscules o majuscules, digit i caracter especial" textFill="RED">
+                           <VBox.margin>
+                              <Insets />
+                           </VBox.margin>
+                        </Label>
+                     </children>
+                  </VBox>
+               </children>
+            </HBox>
+            <HBox prefHeight="90.0" prefWidth="200.0">
+               <children>
+                  <VBox prefHeight="90.0" prefWidth="216.0">
+                     <children>
+                        <Label text="Data de naixement">
+                           <padding>
+                              <Insets bottom="5.0" left="10.0" />
+                           </padding>
+                        </Label>
+                        <DatePicker fx:id="daypicker" promptText="Data de naixement">
+                           <padding>
+                              <Insets left="10.0" />
+                           </padding>
+                           <VBox.margin>
+                              <Insets left="10.0" />
+                           </VBox.margin>
+                        </DatePicker>
+                     </children>
+                  </VBox>
+                  <VBox prefHeight="90.0" prefWidth="228.0">
+                     <children>
+                        <Label fx:id="errorEdat" prefHeight="65.0" prefWidth="201.0" text="L'usuari ha de tindre al menys 16 anys" textFill="RED" />
+                     </children>
+                  </VBox>
+               </children>
+            </HBox>
+            <HBox prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <VBox prefHeight="200.0" prefWidth="100.0" />
+               </children>
+            </HBox>
+            <HBox prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <HBox prefHeight="100.0" prefWidth="48.0" />
+                  <HBox prefHeight="100.0" prefWidth="281.0">
+                     <children>
+                        <Button fx:id="botoCancelar" mnemonicParsing="false" prefHeight="50.0" prefWidth="183.0" text="Cancelar" />
+                     </children>
+                  </HBox>
+                  <HBox prefHeight="100.0" prefWidth="300.0">
+                     <children>
+                        <Button fx:id="botoRegistrarse" mnemonicParsing="false" prefHeight="50.0" prefWidth="200.0" text="Registrar-se" />
+                     </children>
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                  </HBox>
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+   </center>
+</BorderPane>
