--- a/src/poiupv/vistes/FXMLIniciSesio.fxml
+++ b/src/poiupv/vistes/FXMLIniciSesio.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane focusTraversable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poiupv.controladors.IniciSesioController">
+<AnchorPane focusTraversable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poiupv.controladors.FXMLIniciSesioController">
    <children>
       <Text layoutX="49.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Usuari" />
       <Text layoutX="48.0" layoutY="129.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Contrassenya" />
