--- a/src/poiupv/IniciSesio.fxml
+++ b/src/poiupv/IniciSesio.fxml
@@ -1,32 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.ColorAdjust?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane focusTraversable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poiupv.controladors.IniciSesioController">
+<AnchorPane focusTraversable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poiupv.controladors.IniciSesioController">
    <children>
-      <Text layoutX="49.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Usuari" />
-      <Text layoutX="48.0" layoutY="129.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Contrassenya" />
-      <Label fx:id="MissatgeUsuari" disable="true" layoutX="214.0" layoutY="74.0" text="Usuari incorrecte  " textFill="RED" />
-      <Label fx:id="MissatgeContrasenya" disable="true" layoutX="214.0" layoutY="143.0" text="Contrassenya incorrecte" textFill="RED" />
-      <TextField fx:id="usuari" layoutX="46.0" layoutY="70.0" promptText="nºcaracters......">
+      <HBox alignment="CENTER_LEFT" layoutY="14.0" prefHeight="59.0" prefWidth="600.0" style="-fx-background-color: #1877f2;" AnchorPane.bottomAnchor="327.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="14.0">
+         <children>
+            <Text fill="WHITE" smooth="false" strokeType="OUTSIDE" strokeWidth="0.0" text="Inicio Sesión" wrappingWidth="281.13934326171875">
+               <font>
+                  <Font name="System Bold" size="44.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="10.0" />
+               </HBox.margin>
+            </Text>
+         </children>
+      </HBox>
+      <Pane layoutX="164.0" layoutY="103.0" prefHeight="251.0" prefWidth="251.0" style="-fx-background-color: white;">
+         <children>
+            <Label fx:id="MissatgeUsuari" layoutX="48.0" layoutY="58.0" text="Usuario incorrecto" textFill="RED" />
+            <Label fx:id="MissatgeContrasenya" layoutX="49.0" layoutY="117.0" text="Contraseña incorrecta" textFill="RED" />
+            <TextField fx:id="usuari" layoutX="48.0" layoutY="33.0" promptText="Usuario o nickname" />
+            <Button fx:id="iniciarSessio" layoutX="49.0" layoutY="154.0" mnemonicParsing="false" onAction="#iniciarSesio" prefHeight="25.0" prefWidth="149.0" style="-fx-background-color: #1877f2;" text="Entrar" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </Button>
+            <PasswordField fx:id="contrassenya" layoutX="48.0" layoutY="92.0" promptText="Contraseña" />
+            <Button layoutX="49.0" layoutY="201.0" mnemonicParsing="false" onAction="#Registrarse" prefHeight="25.0" prefWidth="149.0" style="-fx-background-color: #00a400;" text="Crear cuenta" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </Button>
+         </children>
          <effect>
-            <ColorAdjust brightness="-0.2" />
+            <DropShadow blurType="GAUSSIAN">
+               <color>
+                  <Color red="0.6052631735801697" green="0.5847141146659851" blue="0.5847141146659851" />
+               </color>
+            </DropShadow>
          </effect>
-      </TextField>
-      <Button fx:id="iniciarSessio" layoutX="44.0" layoutY="200.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="149.0" text="Iniciar sessió" />
-      <PasswordField fx:id="contrassenya" layoutX="44.0" layoutY="139.0" promptText="nºcaracters, lletres num...">
-         <effect>
-            <ColorAdjust brightness="-0.2" />
-         </effect>
-      </PasswordField>
+      </Pane>
    </children>
-   <effect>
-      <ColorAdjust />
-   </effect>
 </AnchorPane>
