--- a/src/poiupv/IniciSesio.fxml
+++ b/src/poiupv/IniciSesio.fxml
@@ -29,8 +29,8 @@
       </HBox>
       <Pane layoutX="164.0" layoutY="103.0" prefHeight="251.0" prefWidth="251.0" style="-fx-background-color: white;">
          <children>
-            <Label fx:id="MissatgeUsuari" layoutX="48.0" layoutY="58.0" text="Usuario incorrecto" textFill="RED" />
-            <Label fx:id="MissatgeContrasenya" layoutX="49.0" layoutY="117.0" text="Contraseña incorrecta" textFill="RED" />
+            <Label fx:id="MissatgeUsuari" layoutX="48.0" layoutY="58.0" text="Usuario incorrecto" textFill="RED" visible="false" />
+            <Label fx:id="MissatgeContrasenya" layoutX="49.0" layoutY="117.0" text="Contraseña incorrecta" textFill="RED" visible="false" />
             <TextField fx:id="usuari" layoutX="48.0" layoutY="33.0" promptText="Usuario o nickname" />
             <Button fx:id="iniciarSessio" layoutX="49.0" layoutY="154.0" mnemonicParsing="false" onAction="#iniciarSesio" prefHeight="25.0" prefWidth="149.0" style="-fx-background-color: #1877f2;" text="Entrar" textAlignment="CENTER" textFill="WHITE">
                <font>
@@ -38,7 +38,7 @@
                </font>
             </Button>
             <PasswordField fx:id="contrassenya" layoutX="48.0" layoutY="92.0" promptText="Contraseña" />
-            <Button layoutX="49.0" layoutY="201.0" mnemonicParsing="false" onAction="#Registrarse" prefHeight="25.0" prefWidth="149.0" style="-fx-background-color: #00a400;" text="Crear cuenta" textAlignment="CENTER" textFill="WHITE">
+            <Button fx:id="botoRegistre" layoutX="49.0" layoutY="201.0" mnemonicParsing="false" onAction="#Registrarse" prefHeight="25.0" prefWidth="149.0" style="-fx-background-color: #00a400;" text="Crear cuenta" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
