--- a/src/poiupv/vistes/Principal.fxml
+++ b/src/poiupv/vistes/Principal.fxml
@@ -48,7 +48,7 @@
                   <Insets left="330.0" />
                </HBox.margin>
                <image>
-                  <Image url="@../resources/avatars/default.png" />
+                  <Image url="@../../resources/avatars/default.png" />
                </image>
             </ImageView>
          </children>
@@ -77,7 +77,7 @@
                            <children>
                               <ImageView fx:id="cartaNautica" fitHeight="1000.0" fitWidth="1000.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../resources/carta_nautica.jpg" />
+                                    <Image url="@../../resources/carta_nautica.jpg" />
                                  </image>
                               </ImageView>
                            </children>
