--- a/src/poiupv/vistes/Menu.fxml
+++ b/src/poiupv/vistes/Menu.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.Avatar?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -8,7 +7,7 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -39,11 +38,7 @@
                         <MenuItem mnemonicParsing="false" onAction="#CerrarSesion" text="Cerrar sesión" />
                   </items>
                      <graphic>
-                        <Avatar fx:id="avatarUsuario" radius="20.0" style="-fx-background-color: #006db5;">
-                           <image>
-                              <Image url="@../../resources/avatars/default.png" />
-                           </image>
-                        </Avatar>
+                        <ImageView fx:id="avatarPerfil" fitHeight="45.0" fitWidth="56.0" pickOnBounds="true" preserveRatio="true" />
                      </graphic>
                 </Menu>
               </menus>
@@ -54,7 +49,7 @@
    <right>
       <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" onAction="#RealizarProblem" text="Realizar">
+            <Button fx:id="botoRealizar" disable="true" mnemonicParsing="false" onAction="#RealizarProblem" text="Realizar">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
