--- a/src/poiupv/vistes/Menu.fxml
+++ b/src/poiupv/vistes/Menu.fxml
@@ -76,7 +76,7 @@
                   <Font name="Verdana Italic" size="20.0" />
                </font>
             </Label>
-            <ListView fx:id="ListaProblems" prefHeight="410.0" prefWidth="400.0" style="-fx-background-color: #9c9c9#bebebec;">
+            <ListView fx:id="ListaProblems" prefHeight="410.0" prefWidth="400.0" style="-fx-background-color: white;">
                <VBox.margin>
                   <Insets bottom="20.0" left="20.0" />
                </VBox.margin>
