--- a/src/poiupv/vistes/Menu.fxml
+++ b/src/poiupv/vistes/Menu.fxml
@@ -18,7 +18,7 @@
    <top>
       <HBox alignment="CENTER_RIGHT" prefHeight="27.0" prefWidth="500.0" style="-fx-background-color: #006db5;" BorderPane.alignment="CENTER">
          <children>
-            <HBox prefHeight="43.0" prefWidth="441.0">
+            <HBox prefHeight="43.0" prefWidth="441.0" HBox.hgrow="ALWAYS">
                <children>
                   <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Menú" wrappingWidth="155.1523895263672">
                      <font>
@@ -42,6 +42,9 @@
                      </graphic>
                 </Menu>
               </menus>
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
             </MenuBar>
          </children>
       </HBox>
@@ -49,19 +52,19 @@
    <right>
       <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="botoRealizar" disable="true" mnemonicParsing="false" onAction="#RealizarProblem" text="Realizar">
+            <Button fx:id="botoRealizar" disable="true" mnemonicParsing="false" onAction="#RealizarProblem" prefHeight="34.0" prefWidth="68.0" text="Realizar" VBox.vgrow="ALWAYS">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
             </Button>
-            <Button ellipsisString="" mnemonicParsing="false" onAction="#ProblemAleat" text="Aleatorio">
+            <Button contentDisplay="CENTER" ellipsisString="" mnemonicParsing="false" onAction="#ProblemAleat" text="Aleatorio" VBox.vgrow="ALWAYS">
                <VBox.margin>
                   <Insets top="20.0" />
                </VBox.margin>
             </Button>
          </children>
          <BorderPane.margin>
-            <Insets />
+            <Insets right="20.0" />
          </BorderPane.margin>
       </VBox>
    </right>
