--- a/src/poiupv/vistes/IniciSesio.fxml
+++ b/src/poiupv/vistes/IniciSesio.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane focusTraversable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="402.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poiupv.controladors.IniciSesioController">
+<AnchorPane focusTraversable="true" prefHeight="400.0" prefWidth="402.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poiupv.controladors.IniciSesioController">
    <children>
       <HBox alignment="CENTER_LEFT" layoutY="14.0" prefHeight="59.0" prefWidth="600.0" style="-fx-background-color: #006db5;" AnchorPane.bottomAnchor="327.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="14.0">
          <children>
@@ -27,7 +27,7 @@
             </Text>
          </children>
       </HBox>
-      <Pane layoutX="75.0" layoutY="94.0" prefHeight="266.0" prefWidth="251.0" style="-fx-background-color: white;">
+      <Pane layoutX="75.0" layoutY="94.0" prefHeight="266.0" prefWidth="251.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="39.80000000000001" AnchorPane.leftAnchor="75.0" AnchorPane.rightAnchor="75.80000000000001" AnchorPane.topAnchor="94.0">
          <children>
             <Label fx:id="MissatgeUsuari" layoutX="48.0" layoutY="58.0" text="Usuario incorrecto" textFill="RED" visible="false" />
             <Label fx:id="MissatgeContrasenya" layoutX="49.0" layoutY="117.0" text="Contraseña incorrecta" textFill="RED" visible="false" />
