--- a/src/poiupv/vistes/Principal.fxml
+++ b/src/poiupv/vistes/Principal.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -15,13 +16,12 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Text?>
 
-<VBox prefHeight="435.0" prefWidth="571.0" stylesheets="@../resources/estilos.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poiupv.controladors.PrincipalController">
+<VBox stylesheets="@../resources/estilos.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poiupv.controladors.PrincipalController">
    <children>
       <HBox alignment="CENTER_LEFT" fillHeight="false" spacing="5.0" VBox.vgrow="NEVER">
          <children>
-            <MenuBar>
+            <MenuBar prefHeight="21.0" prefWidth="531.0">
               <menus>
                 <Menu mnemonicParsing="false" text="Archivo">
                   <items>
@@ -56,26 +56,31 @@
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </VBox.margin>
       </HBox>
-      <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="353.0" prefWidth="571.0">
+      <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="522.0" prefWidth="900.0">
         <items>
-            <Pane prefHeight="91.0" prefWidth="569.0">
+            <Pane minHeight="-Infinity" minWidth="-Infinity" prefHeight="86.0" prefWidth="898.0">
                <children>
-                  <Text layoutX="142.0" layoutY="82.0" strokeType="OUTSIDE" strokeWidth="0.0" text="asi van el problemes" wrappingWidth="201.98828887939453" />
+                  <VBox prefHeight="258.0" prefWidth="898.0">
+                     <children>
+                        <Label fx:id="problema" text="Label" />
+                        <ListView fx:id="llistaRespostes" prefHeight="200.0" prefWidth="200.0" />
+                     </children>
+                  </VBox>
                </children>
             </Pane>
-            <SplitPane dividerPositions="0.13957934990439771" orientation="VERTICAL" prefHeight="223.0" prefWidth="569.0">
+            <SplitPane dividerPositions="0.13957934990439771" orientation="VERTICAL" prefHeight="282.0" prefWidth="898.0">
               <items>
-                  <HBox prefHeight="63.0" prefWidth="569.0">
+                  <HBox prefHeight="80.0" prefWidth="898.0">
                      <children>
                         <Button mnemonicParsing="false" />
                         <Button mnemonicParsing="false" text="Transportador" />
                      </children>
                   </HBox>
-                  <ScrollPane fx:id="map_scrollpane" onMouseMoved="#muestraPosicion" prefHeight="234.0" prefWidth="565.0">
+                  <ScrollPane fx:id="map_scrollpane" onMouseMoved="#muestraPosicion" prefHeight="228.0" prefWidth="898.0">
                      <content>
-                        <Pane>
+                        <Pane focusTraversable="true">
                            <children>
-                              <ImageView fx:id="cartaNautica" fitHeight="1000.0" fitWidth="1000.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="cartaNautica" fitHeight="206.0" fitWidth="872.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../../resources/carta_nautica.jpg" />
                                  </image>
