--- a/src/poiupv/vistes/Registre.fxml
+++ b/src/poiupv/vistes/Registre.fxml
@@ -18,7 +18,7 @@
 
 <BorderPane prefHeight="737.0" prefWidth="699.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poiupv.controladors.RegistreController">
    <top>
-      <HBox prefHeight="115.0" prefWidth="996.0" style="-fx-background-color: #006db5;" BorderPane.alignment="TOP_CENTER">
+      <HBox fillHeight="false" prefHeight="115.0" prefWidth="996.0" style="-fx-background-color: #006db5;" BorderPane.alignment="TOP_CENTER">
          <children>
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Registrarse">
                <font>
@@ -43,11 +43,11 @@
             <Insets bottom="40.0" left="40.0" right="40.0" top="40.0" />
          </BorderPane.margin>
          <children>
-            <VBox layoutY="20.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="539.0" prefWidth="537.0">
+            <VBox layoutY="20.0" prefHeight="539.0" prefWidth="537.0">
                <children>
-                  <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="110.0" prefWidth="522.0">
+                  <HBox prefHeight="110.0" prefWidth="479.0">
                      <children>
-                        <VBox prefHeight="99.0" prefWidth="364.0">
+                        <VBox prefHeight="110.0" prefWidth="301.0">
                            <children>
                               <Label text="Nombre de usuario:">
                                  <padding>
@@ -57,7 +57,7 @@
                                     <Insets left="2.0" />
                                  </VBox.margin>
                               </Label>
-                              <TextField fx:id="usuari" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="30.0" prefWidth="230.0" promptText="6-15 caràcters o dígits, espais - _" />
+                              <TextField fx:id="usuari" prefHeight="26.0" prefWidth="216.0" promptText="6-15 caràcters o dígits, espais - _" />
                               <VBox prefHeight="56.0" prefWidth="426.0">
                                  <children>
                                     <Label fx:id="errorUsuari" prefHeight="44.0" prefWidth="344.0" text="Seleccionar un nou valor que contingui entre 6 i 15 caràcters o dígits i espais _ -" textFill="RED" visible="false" wrapText="true">
@@ -80,16 +80,16 @@
                         <Insets />
                      </VBox.margin>
                   </HBox>
-                  <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="72.0" prefWidth="753.0">
+                  <HBox prefHeight="72.0" prefWidth="753.0">
                      <children>
-                        <VBox prefHeight="88.0" prefWidth="355.0">
+                        <VBox prefHeight="88.0" prefWidth="294.0">
                            <children>
                               <Label text="Correo:">
                                  <VBox.margin>
                                     <Insets bottom="5.0" left="10.0" right="10.0" top="10.0" />
                                  </VBox.margin>
                               </Label>
-                              <TextField fx:id="correu" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="30.0" prefWidth="229.0" promptText="Exemple@gmail.com">
+                              <TextField fx:id="correu" prefHeight="30.0" prefWidth="229.0" promptText="Exemple@gmail.com">
                                  <padding>
                                     <Insets left="10.0" />
                                  </padding>
@@ -112,7 +112,7 @@
                         <Insets bottom="20.0" />
                      </VBox.margin>
                   </HBox>
-                  <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="118.0" prefWidth="994.0">
+                  <HBox prefHeight="118.0" prefWidth="994.0">
                      <children>
                         <VBox prefHeight="122.0" prefWidth="462.0">
                            <children>
@@ -121,7 +121,7 @@
                                     <Insets left="10.0" top="10.0" />
                                  </VBox.margin>
                               </Label>
-                              <PasswordField fx:id="contrassenya" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="30.0" prefWidth="500.0" promptText="8-20 caràcters, 1 lletra minuscules o majuscules, digit i caracter especial">
+                              <PasswordField fx:id="contrassenya" prefHeight="30.0" prefWidth="500.0" promptText="8-20 caràcters, 1 lletra minuscules o majuscules, digit i caracter especial">
                                  <padding>
                                     <Insets left="10.0" top="5.0" />
                                  </padding>
@@ -155,7 +155,7 @@
                                           <Insets bottom="5.0" left="10.0" />
                                        </padding>
                                     </Label>
-                                    <DatePicker fx:id="daypicker" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="30.0" prefWidth="190.0" promptText="Data de naixement">
+                                    <DatePicker fx:id="daypicker" prefHeight="30.0" prefWidth="190.0" promptText="Data de naixement">
                                        <padding>
                                           <Insets left="10.0" />
                                        </padding>
@@ -183,7 +183,7 @@
                                           <Insets bottom="5.0" />
                                        </VBox.margin>
                                     </Label>
-                                    <ChoiceBox fx:id="choicePerfil" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="30.0" prefWidth="150.0" />
+                                    <ChoiceBox fx:id="choicePerfil" prefHeight="30.0" prefWidth="150.0" />
                                  </children>
                                  <HBox.margin>
                                     <Insets left="40.0" />
@@ -200,7 +200,7 @@
                      <children>
                         <VBox prefHeight="200.0" prefWidth="171.0">
                            <children>
-                              <Button fx:id="botoRegistrarse" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#registrarse" prefHeight="37.0" prefWidth="171.0" style="-fx-background-color: #006db5;" text="Registrar-se" />
+                              <Button fx:id="botoRegistrarse" mnemonicParsing="false" onAction="#registrarse" prefHeight="37.0" prefWidth="171.0" style="-fx-background-color: #006db5;" text="Registrar-se" />
                               <Label fx:id="errorJaRegistrat" prefHeight="57.0" prefWidth="179.0" text="Error, l'usuari ja està registrat" textFill="RED" visible="false" />
                            </children>
                            <HBox.margin>
